@@ -10,23 +10,12 @@ static struct ReqComp {
     { "=<", RPMSENSE_LESS | RPMSENSE_EQUAL},
     { "<", RPMSENSE_LESS},
 
+    { "==", RPMSENSE_EQUAL},
     { "=", RPMSENSE_EQUAL},
     
     { ">=", RPMSENSE_GREATER | RPMSENSE_EQUAL},
     { "=>", RPMSENSE_GREATER | RPMSENSE_EQUAL},
     { ">", RPMSENSE_GREATER},
-
-#if defined(RPMSENSE_SERIAL)
-    { "<=S", RPMSENSE_LESS | RPMSENSE_EQUAL | RPMSENSE_SERIAL},
-    { "=<S", RPMSENSE_LESS | RPMSENSE_EQUAL | RPMSENSE_SERIAL},
-    { "<S", RPMSENSE_LESS | RPMSENSE_SERIAL},
-
-    { "=S", RPMSENSE_EQUAL | RPMSENSE_SERIAL},
-
-    { ">=S", RPMSENSE_GREATER | RPMSENSE_EQUAL | RPMSENSE_SERIAL},
-    { "=>S", RPMSENSE_GREATER | RPMSENSE_EQUAL | RPMSENSE_SERIAL},
-    { ">S", RPMSENSE_GREATER | RPMSENSE_SERIAL},
-#endif	/* RPMSENSE_SERIAL */
 
     { NULL, 0 },
 };
